Adds a video banner

--- a/palette-library.html
+++ b/palette-library.html
@@ -8,10 +8,21 @@
     <title>Document</title>
   </head>
   <body>
-    <section>
-      <h1>Palette Library</h1>
+    <section class="main-banner">
+      <div>
+        <video
+          src="src/videos/video-sample-1240x720.mp4"
+          type="video/mp4"
+          autoplay
+          muted
+          loop
+        ></video>
+        <div>
+          <h1>Palette Library</h1>
+          <p>Sei <span id="bannerText"></span></p>
+        </div>
+      </div>
     </section>
-    <hr />
     <section>
       <div class="container">
         <h2>Typography</h2>
@@ -41,5 +52,7 @@
         <h4 class="h4">h4 Heading</h4>
       </div>
     </section>
+
+    <script src="src/js/main-banner.js"></script>
   </body>
 </html>
