Widens the search input field and adds an anchor tag to the logo

--- a/palette-library.html
+++ b/palette-library.html
@@ -15,10 +15,12 @@
     <header>
       <nav class="main-nav">
         <div class="container">
-          <img
-            src="src/images/INGSkywheelersLogo.png"
-            alt="ING Skywheelers Logo"
-          />
+          <a href="/">
+            <img
+              src="src/images/INGSkywheelersLogo.png"
+              alt="ING Skywheelers Logo"
+            />
+          </a>
           <ul>
             <li>
               <a href="#">Über Uns</a>
