Adds a customised cursor

--- a/palette-library.html
+++ b/palette-library.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <header>
+      <div id="circularCursor"></div>
       <nav class="main-nav">
         <div class="container">
           <a href="/">
@@ -42,7 +43,7 @@
             <!-- To be improved with JavaScript -->
             <input type="text" id="searchQuery" />
             <!-- To be changed as a button -->
-            <i class="fa fa-search" style="color: #fff" id="searchBtn"></i>
+            <i class="fa fa-search" id="searchBtn"></i>
           </form>
         </div>
       </nav>
@@ -99,7 +100,6 @@
       </section>
     </main>
 
-    <script src="src/js/main-banner.js"></script>
-    <script src="src/js/navbar.js"></script>
+    <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
